<resources>
    <string name="app_name"> H4YF </string>

    <!-- Strings for Navigation Drawer -->

    <string name="home"> Home </string>
    <string name="search">Browse Hairstyles</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="about_us"> About Us</string>
    <string name="username">user@user.com</string>
    <string name="user_name">Mattie English</string>


    <string name="logodescription">The logo of Hair For Your Face App</string>


    <!-- Strings for on Boarding Screen -->

    <!-- Titles -->
    <string name="first_slide_title"> Detect Facial Features </string>
    <string name="second_slide_title">Get Hairstyle Recommendation</string>
    <string name="third_slide_title">Browse Hairstyles</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc"> Take a photo or select an image of you to automatically detect your face shape, age range, and gender.</string>
    <string name="second_slide_desc">We provide fitting hairstyle recommendations based on your features.</string>
    <string name="third_slide_desc">Browse our vast collection of hairstyles before your next makeover.</string>
    <string name="fourth_slide_desc"> You will find the hairstyle that you like on our app.</string>


    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Let\'s Get Started</string>
    <string name="face_shape">Face Shape Info</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="start_up_heading">Find Your Hairstyles</string>
    <string name="tag_line">We will keep track of your profile after you signup or login</string>
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_email">Email</string>
    <string name="enter_full_name">Full Name</string>
    <string name="phone_number">Phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_text">Search</string>
    <string name="Heart">Heart</string>
    <string name="oblong">Oblong</string>
    <string name="oval">Oval</string>
    <string name="round">Round</string>
    <string name="square">Square</string>
    <string name="get_recommendation">Recommended Hairstyles</string>
    <string name="ar">Augmented Reality</string>


</resources>