<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSignup.StartUpScreen"
    android:background="@color/snowWhite"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/start_up_heading"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/smokyBlack"
            android:textSize="36sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_light"
            android:text="@string/tag_line"
            android:textAlignment="center"
            android:textColor="@color/smokyBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_weight="1"
                android:textColor="@color/smokyBlack"
                android:layout_marginRight="10dp"
                android:background="@color/colorPrimary"
                android:onClick="LoginButtonClicked"
                android:transitionName="transition_login"
                />

            <Button
                android:id="@+id/signup_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_weight="1"
                android:textColor="@color/smokyBlack"
                android:layout_marginLeft="10dp"
                android:background="@color/colorPrimary"
                android:onClick="SignupButtonClicked"
                android:transitionName="transition_signup"
                />

        </LinearLayout>


    </LinearLayout>

</ScrollView>