<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Filter Search"
        android:fontFamily="@font/brandon_grotesque_black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="32sp"
        android:textColor="@color/smokyBlack"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Face Shape"
        android:fontFamily="@font/brandon_grotesque_black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textColor="@color/smokyBlack"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/faceShape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        android:textAlignment="center"
        android:gravity="center_horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/heart_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/Heart"
            app:chipBackgroundColor="@color/colorPrimaryDark"
            android:fontFamily="@font/brandon_grotesque_black"
            android:textColor="@color/smokyBlack" />

        <com.google.android.material.chip.Chip
            android:id="@+id/oblong_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/oblong"
            app:chipBackgroundColor="@color/colorPrimaryDark"
            android:fontFamily="@font/brandon_grotesque_black"
            android:textColor="@color/smokyBlack" />

        <com.google.android.material.chip.Chip
            android:id="@+id/oval_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/oval"
            app:chipBackgroundColor="@color/colorPrimaryDark"
            android:fontFamily="@font/brandon_grotesque_black"
            android:textColor="@color/smokyBlack" />

        <com.google.android.material.chip.Chip
            android:id="@+id/round_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/round"
            app:chipBackgroundColor="@color/colorPrimaryDark"
            android:fontFamily="@font/brandon_grotesque_black"
            android:textColor="@color/smokyBlack" />

        <com.google.android.material.chip.Chip
            android:id="@+id/square_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/square"
            app:chipBackgroundColor="@color/colorPrimaryDark"
            android:fontFamily="@font/brandon_grotesque_black"
            android:textColor="@color/smokyBlack" />


    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/brandon_grotesque_black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:text="Gender"
        android:textColor="@color/smokyBlack" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        android:textAlignment="center"
        android:gravity="center_horizontal">

        <com.google.android.material.chip.Chip
            android:id="@+id/male_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Male"
            app:chipBackgroundColor="@color/colorPrimaryDark"
            android:fontFamily="@font/brandon_grotesque_black"
            android:textColor="@color/smokyBlack"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/female_chip"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Female"
            app:chipBackgroundColor="@color/colorPrimaryDark"
            android:fontFamily="@font/brandon_grotesque_black"
            android:textColor="@color/smokyBlack"/>
    </com.google.android.material.chip.ChipGroup>

</LinearLayout>